Automated analysis fix.